# internet-explorer

./: .env.example  README.md  pyproject.toml
data/: known_tools.txt  tool_flow_baseline_domains.txt
docs/: agent_observations.txt
experiments/exp-003-quality-path-optimization/: contract.md  incidents.md  results.md  status-log.md
experiments/exp-004-compliance-rfp-quality/: contract.md  incidents.md  status-log.md
scripts/: export_run_observations.py  quality_optimization_loop.py  runtime_up.py  runtime_up.sh  start_domain_run.sh  vpn_defaults.sh  vpn_start.sh
src/internet_explorer/: __init__.py  api_probe.py  bash_runner.py  browser_delegate.py  canonicalize.py  cli.py  config.py  evaluator.py  fetcher.py  llm.py  models.py  observation_report.py  pdf_verify.py  persistence.py  planning_cache.py  repo_bridge.py  runtime_bootstrap.py  search.py  service.py  site_graph.py  strategy.py  telemetry.py  tool_inventory.py  vpn.py
tests/: test_api_probe.py  test_browser_delegate.py  test_canonicalize.py  test_cli.py  test_config.py  test_evaluator_memory.py  test_fetcher.py  test_llm.py  test_models.py  test_pdf_verify.py  test_persistence.py  test_planning_cache.py  test_runtime_bootstrap.py  test_service.py  test_site_graph.py  test_strategy.py  test_tool_inventory.py  test_vpn.py
